# llmperf

./: .gitignore  .gitmodules  README.md  constants.py  latency.py  latency_audio.py  latency_image.py  latency_text.py  latency_trace.py  latency_video.py  only_text_latency.py  pyproject.toml  run-acc-benchmark.py  run-iso.py  run-small-benchmark.py  setup.py  utils.py
artifacts/outputs/: audio-static-audio-qwen-iso-20250107-210445.jsonl  image-static-image-mistral-iso-20250107-125738.jsonl  text-static-text-mistral-iso-20250107-125738.jsonl  video-static-video-mistral-iso-20250107-222022.jsonl
llmperf/: constants.py  utils.py
llmperf/config/: approaches.py  datasets.py  models.py  workloads.py
llmperf/postprocessing/: accuracy.py  aggregator.py  filter.py  output.py
llmperf/preprocessing/: input.py  modality_info.py  modality_size.py  output.py
llmperf/promptpreparation/: video.py
scripts/: create_accuracy_workloads.py  create_gamma_workloads.py  create_multi_stream_workloads.py  create_poisson_workloads.py  create_rps_workloads.py  create_small_benchmark_workloads.py  create_static_workloads.py  run_mem_balloon_workloads.py  run_static_workloads.py  run_vllm_chunk_workloads.py  run_vllm_workloads.py
src/: constants.py
src/config/: datasets.py  models.py  workloads.py
src/postprocessing/: output.py
src/preprocessing/: modality_path.py  output.py
src/scripts/: create_gamma_workloads.py  create_poisson_workloads.py  create_static_workloads.py  run_mem_balloon_workloads.py  run_static_workloads.py  (+2 more)
visualization/: benchmark_report.py
