[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmperf"
version = "0.0.1"
description = "LLMPerf Inference is a benchmark suite for measuring how fast systems can run MLLMs in a variety of deployment scenarios."
authors = [
    { name = "Konstantinos Papaioannou", email = "konstantinos.papaioannou@imdea.org" },
    { name = "Giannis Dalianis", email = "ioannis.dalianis@imdea.org" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pillow>=10.4.0"
]

[project.urls]
Homepage = "https://gitlab.software.imdea.org/muse-lab/mllm-inference-workload-eval"
Repository = "https://gitlab.software.imdea.org/muse-lab/mllm-inference-workload-eval"
Issues = "https://gitlab.software.imdea.org/muse-lab/mllm-inference-workload-eval/issues"

[tool.setuptools]
packages = ["llmperf"]